crates/parser/src/snapshots/parser__latex__tests__parse@include__package_include_empty.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/package_include_empty.txt
---
ROOT@0..13
  PREAMBLE@0..13
    PACKAGE_INCLUDE@0..13
      COMMAND_NAME@0..11 "\\usepackage"
      CURLY_GROUP_WORD_LIST@11..13
        L_CURLY@11..12 "{"
        R_CURLY@12..13 "}"

