crates/parser/src/snapshots/parser__latex__tests__parse@include__package_include_multiple.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/package_include_multiple.txt
---
ROOT@0..28
  PREAMBLE@0..28
    PACKAGE_INCLUDE@0..28
      COMMAND_NAME@0..11 "\\usepackage"
      CURLY_GROUP_WORD_LIST@11..28
        L_CURLY@11..12 "{"
        KEY@12..19
          WORD@12..19 "amsmath"
        COMMA@19..20 ","
        WHITESPACE@20..21 " "
        KEY@21..27
          WORD@21..27 "lipsum"
        R_CURLY@27..28 "}"

