crates/parser/src/snapshots/parser__latex__tests__parse@include__package_include_options.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/package_include_options.txt
---
ROOT@0..41
  PREAMBLE@0..41
    PACKAGE_INCLUDE@0..41
      COMMAND_NAME@0..11 "\\usepackage"
      BRACK_GROUP_KEY_VALUE@11..32
        L_BRACK@11..12 "["
        KEY_VALUE_BODY@12..31
          KEY_VALUE_PAIR@12..21
            KEY@12..16
              WORD@12..15 "foo"
              WHITESPACE@15..16 " "
            EQUALITY_SIGN@16..17 "="
            WHITESPACE@17..18 " "
            VALUE@18..21
              TEXT@18..21
                WORD@18..21 "bar"
          COMMA@21..22 ","
          WHITESPACE@22..23 " "
          KEY_VALUE_PAIR@23..26
            KEY@23..26
              WORD@23..26 "baz"
          COMMA@26..27 ","
          WHITESPACE@27..28 " "
          KEY_VALUE_PAIR@28..31
            KEY@28..31
              WORD@28..31 "qux"
        R_BRACK@31..32 "]"
      CURLY_GROUP_WORD_LIST@32..41
        L_CURLY@32..33 "{"
        KEY@33..40
          WORD@33..40 "amsmath"
        R_CURLY@40..41 "}"

