crates/parser/src/snapshots/parser__latex__tests__parse@include__package_include_simple.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/package_include_simple.txt
---
ROOT@0..20
  PREAMBLE@0..20
    PACKAGE_INCLUDE@0..20
      COMMAND_NAME@0..11 "\\usepackage"
      CURLY_GROUP_WORD_LIST@11..20
        L_CURLY@11..12 "{"
        KEY@12..19
          WORD@12..19 "amsmath"
        R_CURLY@19..20 "}"

