crates/parser/src/snapshots/parser__latex__tests__parse@include__svg_include_options.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/svg_include_options.txt
---
ROOT@0..34
  PREAMBLE@0..34
    SVG_INCLUDE@0..34
      COMMAND_NAME@0..11 "\\includesvg"
      BRACK_GROUP_KEY_VALUE@11..21
        L_BRACK@11..12 "["
        KEY_VALUE_BODY@12..20
          KEY_VALUE_PAIR@12..20
            KEY@12..17
              WORD@12..17 "scale"
            EQUALITY_SIGN@17..18 "="
            VALUE@18..20
              TEXT@18..20
                WORD@18..20 ".5"
        R_BRACK@20..21 "]"
      CURLY_GROUP_WORD_LIST@21..34
        L_CURLY@21..22 "{"
        KEY@22..33
          WORD@22..33 "foo/bar.svg"
        R_CURLY@33..34 "}"

