crates/parser/src/snapshots/parser__latex__tests__parse@include__tikz_library_import_simple.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/tikz_library_import_simple.txt
---
ROOT@0..20
  PREAMBLE@0..20
    TIKZ_LIBRARY_IMPORT@0..20
      COMMAND_NAME@0..15 "\\usetikzlibrary"
      CURLY_GROUP_WORD_LIST@15..20
        L_CURLY@15..16 "{"
        KEY@16..19
          WORD@16..19 "foo"
        R_CURLY@19..20 "}"

